# RAG_BASICS

./: README.md  app.py  pyproject.toml
src/: rag_chain.py
