[project]
name = "rag1"
version = "0.1.0"
description = "Multi-PDF Research Assistant"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "chromadb",
    "ipykernel",
    "jupyter",
    "langchain",
    "langchain-chroma>=1.1.0",
    "langchain-community",
    "langchain-google-genai",
    "langchain-groq>=1.1.3",
    "langchain-huggingface>=1.2.2",
    "pandas",
    "pypdf",
    "python-dotenv",
    "sentence-transformers",
    "streamlit>=1.58.0",
    "tqdm",
]
